--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "lazy dm dungeon generator",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack -d --watch",
+    "build": "webpack -p"
   },
   "author": "goran zic",
   "license": "ISC",
@@ -13,10 +14,7 @@
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
     "react": "^15.3.1",
-    "react-dom": "^15.3.1"
-  },
-  "scripts": {
-    "dev": "webpack -d --watch",
-    "build" : "webpack -p"
+    "react-dom": "^15.3.1",
+    "redux": "^3.6.0"
   }
 }
